[tool.poetry]
name = "moodeng"
version = "0.1.0"
description = "this is a open source bot platform to build a quatraped that can also act as your personal assistent"
authors = ["kamal singh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spidev = "^3.6"
st7789 = "^1.0.1"
adafruit-circuitpython-st7789 = "^1.6.3"
adafruit-blinka = "^8.50.0"
adafruit-circuitpython-display-shapes = "^2.10.0"
gpiozero = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
